# ComputerVisionProject

./: .gitignore  CMakeLists.txt  README.md
Dataset/: dictionary.yml  svm.yml
Dataset/MATLAB/: GroundTruth.m
Dataset/training-set/masks/: mask10_0021.yml  mask10_0266.yml  mask10_0383.yml  mask10_0572.yml  mask10_0793.yml  mask10_1071.yml  mask10_1316.yml  mask10_1680.yml  mask10_1898.yml  mask10_2117.yml  mask11_0008.yml  mask11_0197.yml  mask11_0386.yml  mask11_0649.yml  mask11_0863.yml  mask11_1128.yml  mask11_1520.yml  mask11_1861.yml  mask11_2145.yml  mask11_2461.yml  mask12_0026.yml  mask12_0235.yml  mask12_0588.yml  mask12_0909.yml  mask12_1111.yml  mask12_1489.yml  mask12_1783.yml  mask12_1960.yml  mask12_2165.yml  mask12_2496.yml  mask13_0003.yml  mask13_0262.yml  mask13_0663.yml  mask13_0813.yml  mask13_1091.yml  mask13_1362.yml  mask13_1671.yml  mask13_1900.yml  mask13_2324.yml  mask13_2566.yml  (+438 more)
include/: Superpixel.h  SuperpixelCreation.h  Svm.h  Utils.h
src/: CV_project.cpp  Superpixel.cpp  SuperpixelCreation.cpp  Svm.cpp  Utils.cpp
